Update resume link

--- a/src/index.html
+++ b/src/index.html
@@ -270,6 +270,8 @@
             <li data-screen="Screen_About">About</li>
             <li data-screen="Screen_Credits">Credits</li>
             <li data-url="https://alxsaunders.github.io/2D-Portfolio/" class="external-link">2D Portfolio</li>
+            <li data-url="https://docs.google.com/document/d/1BoW7F2QhYwRNFThAKsqgA2nz8cfz0WPrc5SnxRSy-zc/edit?usp=sharing"
+                class="external-link">Resume</li>
         </ul>
     </nav>
 
