--- a/src/index.html
+++ b/src/index.html
@@ -33,21 +33,18 @@
             height: 100%;
         }
 
-        /* iOS-style Navigation Menu - LEFT SIDE */
+        /* iOS-style Navigation Menu - LEFT SIDE, POSITIONED LOWER */
         .nav-menu {
             position: fixed;
             left: 20px;
-            /* LEFT SIDE */
-            top: 50%;
-            transform: translateY(-50%);
+            /* Changed from centered to positioned from bottom */
+            bottom: 80px;
             z-index: 100;
             animation: slideInFromLeft 0.6s ease-out;
-            /* Ensure menu stays within viewport */
-            max-height: calc(100vh - 100px);
-            margin-top: 50px;
-            margin-bottom: 50px;
             width: auto;
             max-width: 220px;
+            /* Ensure menu doesn't get cut off at bottom */
+            max-height: calc(100vh - 160px);
         }
 
         .nav-menu ul {
@@ -183,9 +180,8 @@
         @media (max-width: 768px) {
             .nav-menu {
                 left: 10px;
-                margin-top: 40px;
-                margin-bottom: 40px;
-                max-height: calc(100vh - 80px);
+                bottom: 60px;
+                max-height: calc(100vh - 120px);
             }
 
             .nav-menu li {
@@ -195,20 +191,18 @@
             }
         }
 
-        /* For very tall screens, limit vertical centering */
+        /* For very tall screens, keep it positioned from bottom */
         @media (min-height: 900px) {
             .nav-menu {
-                top: 400px;
-                transform: translateY(0);
+                bottom: 100px;
             }
         }
 
-        /* For short screens, position from top */
+        /* For short screens, position higher from bottom */
         @media (max-height: 600px) {
             .nav-menu {
-                top: 60px;
-                transform: translateY(0);
-                max-height: calc(100vh - 120px);
+                bottom: 40px;
+                max-height: calc(100vh - 80px);
             }
         }
 
@@ -218,15 +212,15 @@
             opacity: 0.5;
         }
 
-        /* Entrance animation from LEFT */
+        /* Updated entrance animation - now slides in from LEFT and BOTTOM */
         @keyframes slideInFromLeft {
             from {
-                transform: translateY(-50%) translateX(-100px);
+                transform: translateX(-100px) translateY(50px);
                 opacity: 0;
             }
 
             to {
-                transform: translateY(-50%) translateX(0);
+                transform: translateX(0) translateY(0);
                 opacity: 1;
             }
         }
