--- a/src/index.html
+++ b/src/index.html
@@ -33,18 +33,156 @@
             height: 100%;
         }
 
-        /* iOS-style Navigation Menu - LEFT SIDE, POSITIONED LOWER */
+        /* Custom Cursor Styles - ENHANCED FOR CLARITY */
+        .custom-cursor {
+            position: fixed;
+            width: 32px;
+            height: 32px;
+            border-radius: 50%;
+            pointer-events: none;
+            z-index: 9999;
+            transform: translate(-50%, -50%);
+            transition: background-color 0.2s ease, transform 0.2s ease, border-color 0.2s ease;
+            border: 3px solid rgba(255, 255, 255, 0.9);
+            background-color: rgba(255, 255, 255, 0.15);
+            backdrop-filter: blur(4px);
+        }
+
+        .custom-cursor.clicked {
+            background-color: rgba(100, 150, 200, 0.6);
+            transform: translate(-50%, -50%) scale(0.8);
+            border-color: rgba(100, 150, 200, 1);
+        }
+
+        .custom-cursor.hovering-screen {
+            transform: translate(-50%, -50%) scale(1.4);
+            border-color: rgba(100, 180, 255, 1);
+            background-color: rgba(100, 180, 255, 0.25);
+            box-shadow: 0 0 20px rgba(100, 180, 255, 0.5), inset 0 0 10px rgba(255, 255, 255, 0.3);
+        }
+
+        .custom-cursor.hovering-clickable {
+            transform: translate(-50%, -50%) scale(1.3);
+            border-color: rgba(100, 220, 100, 1);
+            background-color: rgba(100, 220, 100, 0.3);
+            box-shadow: 0 0 16px rgba(100, 220, 100, 0.6);
+        }
+
+        /* Add pointer finger icon for clickable elements */
+        .custom-cursor.hovering-clickable::before {
+            content: '👆';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 16px;
+        }
+
+        /* Hide default cursor when custom cursor is active */
+        body.custom-cursor-active {
+            cursor: none !important;
+        }
+
+        body.custom-cursor-active * {
+            cursor: none !important;
+        }
+
+        /* INSTRUCTIONS BAR AT BOTTOM - VERTICAL */
+        .instructions-bar {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            z-index: 100;
+            background: rgba(0, 0, 0, 0.35);
+            backdrop-filter: blur(20px);
+            -webkit-backdrop-filter: blur(20px);
+            border-radius: 12px;
+            padding: 16px 20px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3), inset 0 1px 0 rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+            align-items: flex-start;
+            animation: slideInFromBottom 0.6s ease-out;
+            opacity: 0.85;
+            transition: opacity 0.3s ease;
+            min-width: 200px;
+        }
+
+        .instructions-bar:hover {
+            opacity: 1;
+        }
+
+        .instruction-item {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            color: rgba(255, 255, 255, 0.9);
+            font-size: 13px;
+            font-weight: 500;
+        }
+
+        .instruction-icon {
+            font-size: 16px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 20px;
+        }
+
+        .instruction-key {
+            background: rgba(255, 255, 255, 0.15);
+            padding: 4px 10px;
+            border-radius: 4px;
+            font-family: monospace;
+            font-size: 12px;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+            font-weight: 600;
+        }
+
+        @keyframes slideInFromBottom {
+            from {
+                transform: translateY(50px);
+                opacity: 0;
+            }
+
+            to {
+                transform: translateY(0);
+                opacity: 0.85;
+            }
+        }
+
+        /* Responsive for instructions */
+        @media (max-width: 768px) {
+            .instructions-bar {
+                bottom: 10px;
+                right: 10px;
+                padding: 12px 16px;
+                gap: 10px;
+                min-width: 180px;
+            }
+
+            .instruction-item {
+                font-size: 12px;
+            }
+
+            .instruction-key {
+                font-size: 11px;
+                padding: 3px 8px;
+            }
+        }
+
+        /* iOS-style Navigation Menu - LEFT SIDE, POSITIONED LOWER - WIDER VERSION */
         .nav-menu {
             position: fixed;
             left: 20px;
-            /* Changed from centered to positioned from bottom */
             bottom: 80px;
             z-index: 100;
             animation: slideInFromLeft 0.6s ease-out;
             width: auto;
-            max-width: 170px;
-            /* Reduced from 220px to ~3/4 size */
-            /* Ensure menu doesn't get cut off at bottom */
+            max-width: 210px;
             max-height: calc(100vh - 160px);
         }
 
@@ -58,17 +196,28 @@
             box-shadow:
                 0 10px 40px rgba(0, 0, 0, 0.3),
                 inset 0 1px 0 rgba(255, 255, 255, 0.2),
-                inset 0 -1px 0 rgba(0, 0, 0, 0.2);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+                inset 0 -1px 0 rgba(0, 0, 0, 0.2),
+                0 0 50px rgba(255, 255, 255, 0.05);
+            border: 1px solid rgba(255, 255, 255, 0.15);
             display: flex;
             flex-direction: column;
             width: auto;
+            transition: box-shadow 0.3s ease;
+        }
+
+        .nav-menu:hover ul {
+            box-shadow:
+                0 12px 48px rgba(0, 0, 0, 0.4),
+                inset 0 1px 0 rgba(255, 255, 255, 0.25),
+                inset 0 -1px 0 rgba(0, 0, 0, 0.2),
+                0 0 70px rgba(255, 255, 255, 0.08);
         }
 
         .nav-menu li {
-            display: block;
-            padding: 16px 18px;
-            /* Reduced horizontal padding from 24px to 18px */
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            padding: 16px 22px;
             margin: 8px 0;
             border-radius: 14px;
             cursor: pointer;
@@ -78,17 +227,28 @@
             font-weight: 500;
             letter-spacing: 0.3px;
             position: relative;
-            overflow: hidden;
-            text-align: center;
-            min-width: 120px;
-            /* Reduced from 160px to ~3/4 size */
-            max-width: 150px;
-            /* Reduced from 200px to ~3/4 size */
+            overflow: visible;
+            min-width: 150px;
+            max-width: 190px;
             animation: fadeInItemFromLeft 0.4s ease-out forwards;
             opacity: 0;
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.1) 100%);
         }
 
         .nav-menu li::before {
+            content: attr(data-icon);
+            font-size: 20px;
+            line-height: 1;
+            flex-shrink: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 24px;
+            height: 24px;
+            transition: transform 0.3s ease, filter 0.3s ease;
+        }
+
+        .nav-menu li::after {
             content: '';
             position: absolute;
             top: 0;
@@ -96,24 +256,30 @@
             right: 0;
             bottom: 0;
             background: linear-gradient(135deg,
-                    rgba(255, 255, 255, 0.1) 0%,
+                    rgba(255, 255, 255, 0.15) 0%,
                     rgba(255, 255, 255, 0.05) 100%);
             border-radius: 14px;
             opacity: 0;
             transition: opacity 0.3s ease;
+            z-index: -1;
         }
 
-        /* Hover - move RIGHT since menu is on LEFT */
         .nav-menu li:hover {
             transform: translateX(5px);
             color: #fff;
-            background: rgba(255, 255, 255, 0.15);
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0.15) 100%);
             box-shadow:
-                0 5px 20px rgba(0, 0, 0, 0.2),
-                inset 0 1px 0 rgba(255, 255, 255, 0.3);
+                0 8px 24px rgba(0, 0, 0, 0.3),
+                inset 0 1px 0 rgba(255, 255, 255, 0.4),
+                0 0 20px rgba(255, 255, 255, 0.1);
         }
 
         .nav-menu li:hover::before {
+            transform: scale(1.1);
+            filter: drop-shadow(0 0 8px rgba(255, 255, 255, 0.5));
+        }
+
+        .nav-menu li:hover::after {
             opacity: 1;
         }
 
@@ -123,15 +289,15 @@
         }
 
         .nav-menu li.active {
-            background: rgba(255, 255, 255, 0.25);
+            background: linear-gradient(135deg, rgba(100, 180, 255, 0.3) 0%, rgba(100, 180, 255, 0.2) 100%);
             color: #fff;
             box-shadow:
-                0 5px 20px rgba(0, 0, 0, 0.3),
-                inset 0 1px 0 rgba(255, 255, 255, 0.4);
+                0 6px 24px rgba(100, 180, 255, 0.4),
+                inset 0 1px 0 rgba(255, 255, 255, 0.5),
+                0 0 30px rgba(100, 180, 255, 0.3);
             transform: translateX(8px);
         }
 
-        /* Screen indicator dot - on RIGHT side since menu is on LEFT */
         .nav-menu li.active::after {
             content: '';
             position: absolute;
@@ -144,27 +310,8 @@
             border-radius: 50%;
             box-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
             animation: pulse 2s infinite;
-        }
-
-        /* External link indicator */
-        .nav-menu li.external-link {
-            position: relative;
-        }
-
-        .nav-menu li.external-link::after {
-            content: '↗';
-            position: absolute;
-            right: 15px;
-            /* Adjusted from 20px to 15px for smaller width */
-            top: 50%;
-            transform: translateY(-50%);
-            font-size: 14px;
-            opacity: 0.6;
-            transition: opacity 0.3s ease;
-        }
-
-        .nav-menu li.external-link:hover::after {
             opacity: 1;
+            z-index: 1;
         }
 
         @keyframes pulse {
@@ -181,31 +328,26 @@
             }
         }
 
-        /* Responsive adjustments */
         @media (max-width: 768px) {
             .nav-menu {
                 left: 10px;
-                bottom: 60px;
-                max-height: calc(100vh - 120px);
+                bottom: 90px;
+                max-height: calc(100vh - 180px);
             }
 
             .nav-menu li {
-                padding: 14px 15px;
-                /* Reduced from 20px to 15px */
+                padding: 14px 18px;
                 font-size: 14px;
-                min-width: 105px;
-                /* Reduced from 140px to ~3/4 size */
+                min-width: 125px;
             }
         }
 
-        /* For very tall screens, keep it positioned from bottom */
         @media (min-height: 900px) {
             .nav-menu {
                 bottom: 100px;
             }
         }
 
-        /* For short screens, position higher from bottom */
         @media (max-height: 600px) {
             .nav-menu {
                 bottom: 40px;
@@ -213,13 +355,11 @@
             }
         }
 
-        /* Loading state */
         .nav-menu.loading {
             pointer-events: none;
             opacity: 0.5;
         }
 
-        /* Updated entrance animation - now slides in from LEFT and BOTTOM */
         @keyframes slideInFromLeft {
             from {
                 transform: translateX(-100px) translateY(50px);
@@ -232,7 +372,6 @@
             }
         }
 
-        /* Individual item animations from LEFT */
         .nav-menu li:nth-child(1) {
             animation-delay: 0.1s;
         }
@@ -247,6 +386,10 @@
 
         .nav-menu li:nth-child(4) {
             animation-delay: 0.4s;
+        }
+
+        .nav-menu li:nth-child(5) {
+            animation-delay: 0.5s;
         }
 
         @keyframes fadeInItemFromLeft {
@@ -265,18 +408,36 @@
 
 <body>
     <canvas class="webgl"></canvas>
+
+    <!-- Navigation Menu -->
     <nav class="nav-menu">
         <ul>
-            <li data-screen="Screen_Projects">Projects</li>
-            <li data-screen="Screen_About">About</li>
-            <li data-screen="Screen_Credits">Credits</li>
-            <li data-url="https://alxsaunders.github.io/2D-Portfolio/" class="external-link">2D Portfolio</li>
+            <li data-screen="Screen_Projects" data-icon="💼">Projects</li>
+            <li data-screen="Screen_About" data-icon="👤">About</li>
+            <li data-screen="Screen_Credits" data-icon="📧">Contact</li>
+            <li data-url="https://alxsaunders.github.io/2D-Portfolio/" class="external-link" data-icon="🎨">2D Portfolio
+            </li>
             <li data-url="https://docs.google.com/document/d/1BoW7F2QhYwRNFThAKsqgA2nz8cfz0WPrc5SnxRSy-zc/edit?usp=sharing"
-                class="external-link">Resume</li>
+                class="external-link" data-icon="📄">Resume</li>
         </ul>
     </nav>
 
-    <!-- Import Three.js from CDN -->
+    <!-- Instructions Bar -->
+    <div class="instructions-bar">
+        <div class="instruction-item">
+            <span class="instruction-icon">🖱️</span>
+            <span>Drag to move around</span>
+        </div>
+        <div class="instruction-item">
+            <span class="instruction-icon">👆</span>
+            <span>Click screens</span>
+        </div>
+        <div class="instruction-item">
+            <span class="instruction-key">ESC</span>
+            <span>Exit screen</span>
+        </div>
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 
     <script>
@@ -287,65 +448,53 @@
 
             navItems.forEach(item => {
                 item.addEventListener('click', function () {
-                    // Check if this is an external link
                     const externalUrl = this.getAttribute('data-url');
 
                     if (externalUrl) {
-                        // Open external link in new tab
                         window.open(externalUrl, '_blank');
                         return;
                     }
 
-                    // Remove active class from all items
                     navItems.forEach(nav => nav.classList.remove('active'));
-
-                    // Add active class to clicked item
                     this.classList.add('active');
 
-                    // Get screen name
                     const screenName = this.getAttribute('data-screen');
-
-                    // Add loading state
                     navMenu.classList.add('loading');
 
-                    // Check if experience is available (it might not be loaded yet)
                     const checkAndFocusScreen = () => {
                         if (window.experience && window.experience.world && window.experience.world.screens) {
                             const screens = window.experience.world.screens;
                             const screenMesh = screens.screenMeshes[screenName];
 
                             if (screenMesh) {
-                                // Check if screen is in cover mode
                                 const screenState = screens.states[screenName];
 
                                 if (screenState && screenState.hasOwnProperty('inCoverMode') && screenState.inCoverMode) {
-                                    // Exit cover mode first
                                     screenState.inCoverMode = false;
 
-                                    // Reset to starting state
                                     if (screenName === 'Screen_About') {
-                                        screenState.currentTab = 'main';
+                                        screenState.currentTab = 'experience';
                                     } else if (screenName === 'Screen_Projects') {
                                         screenState.currentView = 'main';
                                     } else if (screenName === 'Screen_Credits') {
                                         screenState.currentView = 'main';
                                     }
 
-                                    // Update texture
-                                    screenMesh.material.map = screenState.textures.main;
-                                    // Removed the emissive color changes that were here
+                                    if (screenName === 'Screen_About') {
+                                        screenMesh.material.map = screenState.textures.experience;
+                                    } else {
+                                        screenMesh.material.map = screenState.textures.main;
+                                    }
                                     screenMesh.material.needsUpdate = true;
                                 }
 
                                 screens.focusScreen(screenMesh);
 
-                                // Remove loading state after animation
                                 setTimeout(() => {
                                     navMenu.classList.remove('loading');
                                 }, 1000);
                             }
                         } else {
-                            // If experience is not ready, try again in 100ms
                             setTimeout(checkAndFocusScreen, 100);
                         }
                     };
@@ -354,14 +503,12 @@
                 });
             });
 
-            // Listen for escape key to clear active state
             document.addEventListener('keydown', function (event) {
                 if (event.key === 'Escape') {
                     navItems.forEach(nav => nav.classList.remove('active'));
                 }
             });
 
-            // Override exitScreenView to clear active state
             const checkAndOverrideExit = setInterval(() => {
                 if (window.experience?.world?.screens?.exitScreenView) {
                     const screens = window.experience.world.screens;
